tests/sylt_std/as_float_faulty.sy
from std use as_float

start :: fn do
    as_float("a")
end

// error: $A 'int' cannot be a 'str'
